--- a/src/components/list/TodoDetails.css
+++ b/src/components/list/TodoDetails.css
@@ -4,6 +4,22 @@
     padding-bottom: 10px;
 }
 
+.head-top{
+    display: flex;
+    padding-right: 5px;
+}
+
+.head-top > h3 {
+    flex: 1;
+}
+
+#del-btn{
+    height: 40px;
+    width: 40px;
+    display: grid;
+    place-content: center;
+}
+
 .todo-title{
     padding-left: 13px;
     text-transform: capitalize;
